<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ActivityDataTransfer</string>
    <string name="title_activity_process_data">ActivityProcessData</string>
    <string name="title_activity_save_data">SaveData</string>
    <string name="title_activity_report">ReportActivity</string>
    
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="banner_main">Android Activity and Data Storage Example</string>
    <string name="banner_process">Processing Credit Card....</string>
    <string name="banner_save">Save Data using</string>
    <string name="banner_report">Report Data</string>
    
    <string name="result">Result</string>
    <string name="success">Success</string>
    <string name="error">Error</string>
    <string name="sqlite_content">SQL Content here</string>
    <string name="preference_content">Preference Content here</string>
    
    <string name="enter_first_name">First name :</string>
    <string name="edit_first_name">eg: John </string>
    <string name="enter_last_name">Last name :</string>
    <string name="edit_last_name">eg: Scott</string>
    <string name="enter_address">Address :</string>
    <string name="edit_address">eg: 101 Mission St, San Francisco.</string>
    <string name="enter_cc_number">Credit Card Number :</string>
    <string name="edit_cc_number">eg: 10101010101010</string>
    
    <string name="button_process_data">Process Data</string>
    <string name="button_save_data">Save Data</string>
    <string name="button_report_data">Report Data</string>
    <string name="button_close">Close</string>
    <string name="button_complete_process">Complete Process</string>
    <string name="button_preferences">Preferences</string>
    <string name="button_sqlite">SQLite</string>
    
    <string name="preferences">Preferences Data :</string>
    <string name="sqlite">SQLite Data :</string>

</resources>