<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <!--
    <GridView
        android:id="@+id/gridView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:numColumns="2" >
             
    </GridView>
    -->

    <TextView
        android:id="@+id/banner_main"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_main"
        android:textAppearance="?android:attr/textAppearanceLarge" />
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" 
        android:layout_gravity="bottom">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/enter_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_first_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_first_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_first_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/enter_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_last_name"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_last_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_last_name" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/enter_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_address"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_address" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/enter_cc_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_cc_number"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/edit_cc_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/edit_cc_number"
            android:inputType="numberSigned" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center" >

        <Button
            android:id="@+id/button_process_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="processData"
            android:text="@string/button_process_data" />

        <Button
            android:id="@+id/button_save_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="saveData"
            android:text="@string/button_save_data" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" 
        android:gravity="center">

        <Button
            android:id="@+id/button_report_data"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="reportData"
            android:text="@string/button_report_data" />

        <Button
            android:id="@+id/button_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="closeApp"
            android:text="@string/button_close" />
    </LinearLayout>
     </LinearLayout>
</LinearLayout>