<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/banner_report"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_report"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="bottom"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/button_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_preferences"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/preference_content"
            android:layout_width="match_parent"
            android:layout_height="140dp"
            android:text="@string/preference_content"
            android:textAppearance="?android:attr/textAppearanceMedium" />
    </LinearLayout>

    <TextView
        android:id="@+id/button_sqlite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_sqlite" 
        android:textAppearance="?android:attr/textAppearanceMedium"/>

   
<FrameLayout
    	
        android:background="@style/AppTheme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >
         
         <TextView
        android:id="@+id/sqlite_content"
        android:layout_width="match_parent"
        android:layout_height="140dp"
        android:text="@string/sqlite_content"
        android:textAppearance="?android:attr/textAppearanceMedium" />
    </FrameLayout>

<Button
    android:id="@+id/button_close"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/button_close" 
    android:layout_gravity="center"/>

</LinearLayout>