<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/banner_process"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_process"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/result"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/result"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <RadioGroup
            android:id="@+id/radioButton_processing_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal" >

            <RadioButton
                android:id="@+id/radioButton_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/success" />

            <RadioButton
                android:id="@+id/radioButton_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/error" />
        </RadioGroup>

        <Button
            android:id="@+id/button_complete_process"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="processData"
            android:text="@string/button_complete_process" />
    </LinearLayout>

</LinearLayout>