<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/banner_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/banner_save"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/button_preferences"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:onClick="saveUsingPreferences"
            android:text="@string/button_preferences" />

        <Button
            android:id="@+id/button_sqlite"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:onClick="saveUsingSqlite"
            android:text="@string/button_sqlite" />
    </LinearLayout>

</LinearLayout>